new file:   data/divorce-20c.js 	renamed:    data/devorce-detail.js -> data/divorce-detail.js 	renamed:    data/main.js -> data/divorce-rate.js 	new file:   data/income-bin.js 	new file:   data/income-rural.js 	deleted:    "data/\345\256\230\346\226\271\345\252\222\344\275\223_\351\242\221\346\254\241\345\211\21510\346\235\241\345\275\242\345\233\276_\345\220\210\345\271\266\345\256\230\345\252\222.html" 	deleted:    "data/\345\276\256\345\215\232\347\224\250\346\210\267_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html" 	deleted:    "data/\347\237\245\344\271\216_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html" 	deleted:    demo/background.png 	deleted:    demo/styles.css 	modified:   demo/test1.html 	new file:   demo/test2.html 	new file:   demo/test3.html 	modified:   index.html 	modified:   style_for_test.css

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <div id="chapter-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
             <h1 class="adding-title">“快来抱抱她”</h1>
-            <h4 class="m-auto">前言 | 她们，单亲母亲</h4>
+            <h4 class="m-auto">第一章 | 她们，单亲母亲</h4>
         </div>
         <div class="mobile-content">
-            <h3 class="title">前言</h3>
+            <h3 class="title">第一章</h3>
             <h4 class="secondary-header">她们，单亲母亲</h4>
         </div>
     </div>
@@ -92,9 +92,9 @@
             </a>
             <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')">
                 <span class="material-symbols-outlined">monitoring</span>
-                <div class="icon-text">前言</div>
+                <div class="icon-text">第一章</div>
                 <div class="tooltip">
-                    <p>前言：<br>她们，单亲母亲</p>
+                    <p>第一章：<br>她们，单亲母亲</p>
                 </div>
             </a>
             <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')">
@@ -128,7 +128,7 @@
             </a>
             <a class="icon-bar-margin" id="chapter-1-button" onclick="scrollToElement('chapter-1')">
                 <span class="material-symbols-outlined">monitoring</span>
-                <!-- <div class="icon-text">前言</div> -->
+                <!-- <div class="icon-text">第一章</div> -->
             </a>
             <a class="icon-bar-margin" id="chapter-2-button" onclick="scrollToElement('chapter-2')">
                 <span class="material-symbols-outlined">join_right</span>
@@ -174,7 +174,7 @@
     <section class="parallax-container">
         <section class="parallax" id="parallax-1">
             <div class="parallax-content">
-                <h1 class="parallax-title">前言：</h1>
+                <h1 class="parallax-title">第一章</h1>
                 <h1 class="parallax-title">她们，单亲母亲</h1>
             </div>
         </section>
@@ -184,12 +184,12 @@
         <div class="container pt-5 row col-12 mx-auto" data-aos="fade-up" data-aos-duration="1100">
             <div class="text-center" id="chapter-1-title"> <!-- 第一章标题（移动端换行）-->
                 <div class="desktop-content">
-                    <h2 class="title text-gradient-2">前言</h2>
+                    <h2 class="title text-gradient-2">第一章</h2>
                     <p></p>
                     <h3 class="m-auto text-gradient-2">她们，单亲母亲</h3>
                 </div>
                 <div class="mobile-content">
-                    <h2 class="title text-gradient-2">前言</h2>
+                    <h2 class="title text-gradient-2">第一章</h2>
                     <p></p>
                     <h3 class="m-auto text-gradient-2">她们，单亲母亲</h3>
                 </div>
@@ -526,7 +526,7 @@
             </p>
             <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
             <div class="sticker-container"> <!-- 这是小贴纸 -->
-                <img src="img/devorce.png" alt="Image">
+                <img src="img/divorce.png" alt="Image">
             </div>
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在家庭形态日益多元化的社会变革中，单亲家庭迅速崛起，成为<mark
@@ -550,7 +550,7 @@
             </p>
             <div class="row justify-content-center" style="padding-top: 20px;">
                 <div class="col-md-6 col-lg-6 m-b-50">
-                    <img src="img/20c.png"> <!-- 这是一张图片 -->
+                    <div class="chart-center" id="divorce-20c"></div>
                 </div>
             </div>
             <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
@@ -598,7 +598,7 @@
             <div class="container col-lg-8">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="chart-center" id="devorce"></div>
+                        <div class="chart-center" id="divorce-rate"></div>
                         <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
                             数据来源：EPS数据平台 中国民政数据库
                         </p>
@@ -622,7 +622,7 @@
                         </p>
                     </div>
                     <div class="col-md-6">
-                        <div class="chart-center" id="devorce-detail"></div> <!-- 这是一个图表 -->
+                        <div class="chart-center" id="divorce-detail"></div> <!-- 这是一个图表 -->
                         <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
                             数据来源：EPS数据平台 中国民政数据库
                         </p>
@@ -700,25 +700,11 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这些身处古代、教育背景受限的单身母亲，却持有超越时代的教育理念，培养出了青史留名的杰出人才。然而，人们在传颂子女辉煌成就的同时，却往往忽略了这些伟大母亲在背后默默付出的艰辛与努力。
                 </p>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
-                <p class="m-auto line-height-3 font-songti-large text-center"> <!-- 这是一个BIG的居中文本 -->
-                    影视作品中的单亲母亲形象
-                </p>
-                <div class="row justify-content-center" style="padding-top: 60px;">
-                    <div class="col-md-6 col-lg-8 m-b-50">
-                        <img src="img/new-media.png"> <!-- 影视作品照片墙 -->
-                    </div>
-                </div>
-                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
-                    （影视作品相关资料）
-                </p>
-                <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在当代的影视作品中，单亲母亲的形象塑造常常成为网络上的热门话题。在《隐秘的角落》中，朱朝阳的母亲，一位与前夫离婚后对儿子有着强烈控制欲的单亲妈妈，她对于儿子的教育方式引发了广泛的讨论；《我是真的爱你》中，单身母亲陈娇蕊离婚带娃依然“狠遍职场”，给人留下深刻印象；《好事成双》中，张小斐试验的林双为带女儿辞职在家，也为了和水性杨花的丈夫争夺女儿抚养权孤注一掷、放手一搏；而在《加油！妈妈》中，张雨绮饰演的单亲妈妈在工作和家庭的双重压力下，依然积极面对生活，触动许多网友的心弦。
-                </p>
                 <p class="m-auto line-height-3 font-songti-large text-center" id="intro-title">
                     那现实生活中，单亲母亲的真实处境是怎么样的？
                 </p>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-8 m-b-50" id="intro-video">
+                    <div class="col-md-6 col-lg-12 m-b-50" id="intro-video">
                         <img src="漫画/进入房子动画/按键.png" id="play-button"> <!-- 这是一张图片 -->
                         <video id="intro-video-element" style="display:none;">
                             <source src="漫画/进入房子动画/敲门.mp4" type="video/mp4">
@@ -743,10 +729,10 @@
                 </p>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
                 <p class="m-auto line-height-3 font-songti-large text-center">
-                    “看，那是我的奖杯。辞职带娃前我也曾光芒万丈”
+                    “孩子能顺利成长就行，做母亲的，都是应该的”
                 </p>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-8 m-b-50">
+                    <div class="col-md-6 col-lg-12 m-b-50">
                         <img src="漫画/展示奖杯.png"> <!-- 这是一张图片 -->
                     </div>
                 </div>
@@ -875,7 +861,7 @@
                     “我老是工作到很晚，等我回家，孩子都睡了。”
                 </p>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-8 m-b-50">
+                    <div class="col-md-6 col-lg-12 m-b-50">
                         <img src="漫画/嘘他在睡觉.png"> <!-- 这是一张图片 -->
                     </div>
                 </div>
@@ -950,6 +936,10 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在中国，单亲母亲群体面临的挑战同样显著且复杂。由于相关总体资料的缺失，我们只能从部分资料中窥见一斑。
                 </p>
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <p class="m-auto line-height-3 font-songti-medium text-center"> <!-- 这是一个M号的居中文本 -->
+                    城市中的单亲母亲月收入情况
+                </p>
                 <div class="chart-center" id="money-chart"></div>
                 <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
                     数据来源：中国婚姻家庭研究会,中国妇女发展基金会. (2019). 十城市单亲母亲生活状况及需求调研报告.
@@ -957,14 +947,37 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据《十城市单亲母亲生活状况及需求调研报告》的数据，34.3%的单亲母亲月收入在2000元及以下，29.2%在2001-4000元之间。月收入在4001-6000元的占25.4%，在6001-10000元的占17.8%，月收入超过10000元的仅占6.2%。
                 </p>
-                <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;尽管不少单亲母亲都在工作，但通常因缺乏获得高薪工作的教育或经验而难以获得较高收入。此外，养育孩子的责任使得她们难以全职工作，“带孩”与“工作”的难以平衡，进一步限制了她们的工作收入。
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <p class="m-auto line-height-3 font-songti-medium text-center"> <!-- 这是一个M号的居中文本 -->
+                    单亲母亲收入分布
                 </p>
+                <div class="chart-center" id="income-bin" style="height: 800px; max-width: 1000px;"></div>
+                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                    数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=201，有效数据N=133。
+                </p>
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而基于北大家庭跟踪调查（2020）筛选的单亲母亲的样本，单亲母亲过去12个月的税后工资性收入主要集中在0至50000元区间。其中，收入在20000至30000元的人数最多，而超过50000元的单亲母亲较少，收入在180000至200000元的仅有1人。总体来看，单亲母亲的收入分布呈现右偏，大多数收入集中在较低区间。
+                </p>
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据一项对西安市的单亲母亲的研究，与已婚女性相比，单亲母亲的生活质量显著较低，这种差异主要体现在经济收入、健康状况、抚养子女及住房压力等方面。
                 </p>
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而放眼可见的，更广泛的非一线城市、农村地区......在那些没人关注的角落，这个数据只会更糟糕。根据北大中国家庭追踪调查的数据显示，农村单亲母亲的贫困率显著高于城镇单亲母亲。在农村，单亲母亲的收入水平普遍低于全国平均水平，生活质量也显著低于城镇居民。这些单亲母亲隐藏在广阔的社会角落里，极少受到关注。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;尽管不少单亲母亲都在工作，但通常因缺乏获得高薪工作的教育或经验而难以获得较高收入。此外，养育孩子的责任使得她们难以全职工作，“带孩”与“工作”的难以平衡，进一步限制了她们的工作收入。
+                </p>
+                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <p class="m-auto line-height-3 font-songti-medium text-center"> <!-- 这是一个M号的居中文本 -->
+                    城市与农村间单亲母亲收入差异比较
+                </p>
+                <div class="chart-center" id="income-rural"></div>
+                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                    数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=201，有效数据N=133。
+                </p> 
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而在城市与农村间的对比上，城市和农村单亲母亲的收入存在明显差异。城市单亲母亲的收入水平明显高于农村，部分个案的收入超过了10万元。相比之下，农村单亲母亲的收入主要集中在较低的收入区间。总结来看，城市单亲妈妈的收入分布更为广泛和多样，高收入人群比例较大，而农村单亲妈妈的收入主要集中在较低收入区间，高收入人群非常少。
+                </p>
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;放眼可见的，更广泛的非一线城市、农村地区......在那些没人关注的角落，这个数据只会更糟糕。根据北大中国家庭追踪调查的数据显示，农村单亲母亲的贫困率显著高于城镇单亲母亲。在农村，单亲母亲的收入水平普遍低于全国平均水平，生活质量也显著低于城镇居民。这些单亲母亲隐藏在广阔的社会角落里，极少受到关注。
                 </p>
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
@@ -1268,18 +1281,28 @@
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">小组成员：张思锐 谢建双 张鹤馨 韩子涵</p>
                         <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3 small">数据及制作</p>
-                        <p class="m-auto line-height-3">数据收集：谢建双 张思锐 张鹤馨</p>
+                        <p class="m-auto line-height-3 small">制作分工</p>
                         <p class="m-auto line-height-3">文献调研：谢建双 张思锐 张鹤馨</p>
-                        <p class="m-auto line-height-3">网站制作及数据可视化：谢建双</p>
-                        <p class="m-auto line-height-3">平面设计及绘画：张鹤馨</p>
-                        <!-- <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3 small">内容文案</p>
-                        <p class="m-auto line-height-3">文案撰写及配图制作：张思锐 韩子涵 谢建双</p> -->
+                        <p class="m-auto line-height-3">数据收集：谢建双 张思锐 张鹤馨</p>
+                        <p class="m-auto line-height-3">数据分析：谢建双 张思锐</p>
+                        <p class="m-auto line-height-3">视觉与可视化：张鹤馨 张思锐 谢建双</p>
+                        <p class="m-auto line-height-3">文稿写作：张思锐 谢建双</p>
+                        <p class="m-auto line-height-3">插图绘制：张鹤馨</p>
+                        <p class="m-auto line-height-3">网站制作：谢建双</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">以下成员对本文亦有贡献</p>
-                        <p class="m-auto line-height-3">深度访谈：韩子涵</p>
-                        <p class="m-auto line-height-3">（感谢愿意参与深访的单亲母亲）</p>
+                        <p class="m-auto line-height-3">文案润色等：韩子涵</p>
+                        <p class="m-auto line-height-3 small">（文案润色，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
+                        <p class="m-auto line-height-3 small"
+                            style="color: #fefff0 !important; margin-bottom: -60px !important;">
+                            （激情落泪奖：曾创下最后两天才在小组成员催促下打开小组文档的壮举）</p>
+                        <span class="d-flex justify-content-center split"></span>
+                        <p class="m-auto line-height-3">数据来源：</p>
+                        <p class="small m-auto line-height-3 text-start col-lg-3">
+                            1. 北大家庭跟踪调查2020<br>
+                            2. 十城市单亲母亲生活状况及需求调研报告<br>
+                            3. EPS数据平台中国民政数据库
+                        </p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">资料引用：</p>
                         <p class="small m-auto line-height-3 text-start">
@@ -1350,12 +1373,15 @@
 
 <!-- 自定义图表 -->
 <script src="data/area.js"></script>
+<script src="data/divorce-detail.js"></script>
 <script src="data/trend.js"></script>
 <script src="data/continent-2022-treemap-sunburst.js"></script>
 <script src="data/qcontinent.js"></script>
 <script src="data/qcountry.js"></script>
-<script src="data/main.js"></script>
-<script src="data/devorce-detail.js"></script>
+<script src="data/divorce-rate.js"></script>
+<script src="data/divorce-20c.js"></script>
+<script src="data/income-bin.js"></script>
+<script src="data/income-rural.js"></script>
 <script src="data/money.js"></script>
 
 </html>
