--- a/demo/test1.html
+++ b/demo/test1.html
@@ -1,77 +1,104 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>单亲妈妈效果</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>单亲家庭比例及类型（1982年和1990年）</title>
+    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row no-gutters">
-            <div class="col-md-6 left-section">
-                <div class="overlay-text">单亲<br>妈妈</div>
-            </div>
-            <div class="col-md-6 right-section">
-                <div class="content">
-                    <h1>可滑动的文字内容</h1>
-                    <p>这是一些可以滑动的文字内容。你可以在这里添加更多的文本来展示更多信息。</p>
-                    <p>再加一些内容，让页面变得更长。</p>
-                    <p>再多一点文字，以确保右边部分是可滚动的。</p>
-                    <p>再来点内容，测试滚动效果。</p>
-                    <p>继续添加内容...</p>
-                    <p>再来一些...</p>
-                    <p>更多内容...</p>
-                    <p>测试滚动效果。</p>
-                    <p>这是最后一段文本。</p>
-                    <h1>可滑动的文字内容</h1>
-                    <p>这是一些可以滑动的文字内容。你可以在这里添加更多的文本来展示更多信息。</p>
-                    <p>再加一些内容，让页面变得更长。</p>
-                    <p>再多一点文字，以确保右边部分是可滚动的。</p>
-                    <p>再来点内容，测试滚动效果。</p>
-                    <p>继续添加内容...</p>
-                    <p>再来一些...</p>
-                    <p>更多内容...</p>
-                    <p>测试滚动效果。</p>
-                    <p>这是最后一段文本。</p>
-                    <h1>可滑动的文字内容</h1>
-                    <p>这是一些可以滑动的文字内容。你可以在这里添加更多的文本来展示更多信息。</p>
-                    <p>再加一些内容，让页面变得更长。</p>
-                    <p>再多一点文字，以确保右边部分是可滚动的。</p>
-                    <p>再来点内容，测试滚动效果。</p>
-                    <p>继续添加内容...</p>
-                    <p>再来一些...</p>
-                    <p>更多内容...</p>
-                    <p>测试滚动效果。</p>
-                    <p>这是最后一段文本。</p>
-                    <h1>可滑动的文字内容</h1>
-                    <p>这是一些可以滑动的文字内容。你可以在这里添加更多的文本来展示更多信息。</p>
-                    <p>再加一些内容，让页面变得更长。</p>
-                    <p>再多一点文字，以确保右边部分是可滚动的。</p>
-                    <p>再来点内容，测试滚动效果。</p>
-                    <p>继续添加内容...</p>
-                    <p>再来一些...</p>
-                    <p>更多内容...</p>
-                    <p>测试滚动效果。</p>
-                    <p>这是最后一段文本。</p>
-                    <h1>可滑动的文字内容</h1>
-                    <p>这是一些可以滑动的文字内容。你可以在这里添加更多的文本来展示更多信息。</p>
-                    <p>再加一些内容，让页面变得更长。</p>
-                    <p>再多一点文字，以确保右边部分是可滚动的。</p>
-                    <p>再来点内容，测试滚动效果。</p>
-                    <p>继续添加内容...</p>
-                    <p>再来一些...</p>
-                    <p>更多内容...</p>
-                    <p>测试滚动效果。</p>
-                    <p>这是最后一段文本。</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="main" style="width: 600px; height: 600px;"></div>
+    <script type="text/javascript">
+        var myChart = echarts.init(document.getElementById('main'));
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        var option = {
+            title: {
+                text: '单亲家庭比例及类型（1982年和1990年）',
+                left: 'center',
+                top: '10%'
+            },
+            tooltip: {
+                trigger: 'item',
+                formatter: '{a} <br/>{b}: {c}%'
+            },
+            angleAxis: {
+                startAngle: 90
+            },
+            radiusAxis: {
+                type: 'category',
+                data: ['1982年', '1990年'],
+                z: 10
+            },
+            polar: {
+                center: ['50%', '55%'],
+                radius: ['40%', '70%']
+            },
+            series: [
+                {
+                    type: 'bar',
+                    data: [9.26, 5.28],
+                    coordinateSystem: 'polar',
+                    name: '分居式单亲家庭',
+                    stack: 'a',
+                    emphasis: {
+                        focus: 'series'
+                    },
+                    itemStyle: {
+                        color: '#9FA8DA'
+                    },
+                    label: {
+                        show: true,
+                        position: 'middle',
+                        formatter: '{c}%',
+                        color: '#000'
+                    }
+                },
+                {
+                    type: 'bar',
+                    data: [2.95, 1.78],
+                    coordinateSystem: 'polar',
+                    name: '丧偶式单亲家庭',
+                    stack: 'a',
+                    emphasis: {
+                        focus: 'series'
+                    },
+                    itemStyle: {
+                        color: '#BCAAA4'
+                    },
+                    label: {
+                        show: true,
+                        position: 'middle',
+                        formatter: '{c}%',
+                        color: '#000'
+                    }
+                },
+                {
+                    type: 'bar',
+                    data: [0.38, 0.53],
+                    coordinateSystem: 'polar',
+                    name: '离婚式单亲家庭',
+                    stack: 'a',
+                    emphasis: {
+                        focus: 'series'
+                    },
+                    itemStyle: {
+                        color: '#FFCCBC'
+                    },
+                    label: {
+                        show: true,
+                        position: 'middle',
+                        formatter: '{c}%',
+                        color: '#000'
+                    }
+                }
+            ],
+            legend: {
+                show: true,
+                data: ['分居式单亲家庭', '丧偶式单亲家庭', '离婚式单亲家庭'],
+                top: 'bottom'
+            }
+        };
+
+        myChart.setOption(option);
+    </script>
 </body>
 </html>
