--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">以下成员对本文亦有贡献</p>
-                        <p class="m-auto line-height-3">文案润色等：韩子涵</p>
+                        <p class="m-auto line-height-3">文案润色、深度访谈等：韩子涵</p>
                         <p class="m-auto line-height-3 small">（文案润色，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
                         <p class="m-auto line-height-3 small"
                             style="color: #fefff0 !important; margin-bottom: -60px !important;">
