--- a/index.html
+++ b/index.html
@@ -513,8 +513,7 @@
                 </div>
             </div>
             <p class="m-auto line-height-3">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.丧偶式单亲母亲：由于丈夫意外或疾病等原因去世，母亲独自抚养未婚子女。
-            </p>
+i            </p>
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.离异单亲母亲：因离婚而独自抚养未婚子女的母亲。
             </p>
@@ -591,7 +590,11 @@
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2020年至今，尽管《民法典》对离婚手续进行了限制，但离婚率仍然保持在较高水平。未婚生育的单亲母亲数量有所增加，但仍处于较低比例。
             </p>
-            <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+            <div class="comic-container">
+                <div class="dialogue comic-title">
+                    <p class="m-auto little-title">婚姻状况与单亲家庭</p>
+                </div>
+            </div>
             <p class="m-auto line-height-3 font-songti-large text-center"> <!-- 这是一个BIG的居中文本 -->
                 我国2000年至2021年离婚率
             </p>
@@ -630,6 +633,25 @@
                 </div>
             </div>
             <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+            <p class="m-auto line-height-3 font-songti-large text-center">
+                我国2013年至2022年婚姻状况变化趋势
+            </p>
+            <div class="container col-lg-8">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="chart-center" id="rate-divorce-compare"></div>
+                        <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
+                            数据来源：EPS数据平台 中国民政数据库
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="chart-center" id="rate-widowhood-compare"></div>
+                        <p class="small m-auto line-height-3 text-start"> <!-- 这是数据注释 -->
+                            数据来源：EPS数据平台 中国民政数据库
+                        </p>
+                    </div>
+                </div>
+            </div>
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在婚姻状况变化方面，根据全国人口抽样情况的数据，离婚占比逐年上升，从2013年的1.32%增加到2022年的1.99%。男性离婚人口占比从2013年的1.50%上升到2022年的2.22%，女性离婚人口占比从2013年的1.13%上升到2022年的1.77%。总体来看，离婚占比在男女之间都有显著增长，且男性离婚占比始终高于女性。此外，丧偶率在2013年至2022年间相对稳定，女性丧偶比例远高于男性，是男性的三倍以上。
             </p>
@@ -741,6 +763,11 @@
                         <p class="m-auto little-title">“被牺牲”的单亲母亲</p>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-10 m-b-50">
+                        <img src="漫画/对话/1.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“成为单亲母亲，意味着什么”
                 </p>
@@ -768,6 +795,11 @@
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">成为单亲母亲后，她们和社会有了距离</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-10 m-b-50">
+                        <img src="漫画/对话/3.png"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3">
@@ -799,6 +831,11 @@
                 <div class="comic-container"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">不容忽视的污名化现象</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-10 m-b-50">
+                        <img src="漫画/对话/2.png"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3">
@@ -1247,10 +1284,11 @@
                         <img src="漫画/手机闹钟响动图.GIF"> <!-- 这是一张图片 -->
                     </div>
                 </div>
-                <p class="m-auto line-height-3 font-songti-large text-center">
-                    “好啦小锐，我要去接宝贝回家了，希望我的故事能对你们的调查有所帮助，也希望有更多的人关注单亲母亲的群体，号召更多的力量支持我们！”
-                </p>
-                <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-10" style="margin-top: -320px; margin-bottom: -160px; z-index: 100;">
+                        <img src="漫画/对话/9.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-8 m-b-50">
                         <img src="漫画/告别.png"> <!-- 这是一张图片 -->
@@ -1372,8 +1410,9 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- 自定义图表 -->
-<script src="data/area.js"></script>
 <script src="data/divorce-detail.js"></script>
+<script src="data/rate-divorce-compare.js"></script>
+<script src="data/rate-widowhood-compare.js"></script>
 <script src="data/trend.js"></script>
 <script src="data/continent-2022-treemap-sunburst.js"></script>
 <script src="data/qcontinent.js"></script>
