modified:   index.html

--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
                 </div>
             </div>
             <p class="m-auto line-height-3">
-i            </p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.丧偶单亲母亲：由于丈夫意外或疾病等原因去世，母亲独自抚养未婚子女。
+            </p>
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.离异单亲母亲：因离婚而独自抚养未婚子女的母亲。
             </p>
@@ -1329,7 +1330,7 @@ i            </p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">以下成员对本文亦有贡献</p>
-                        <p class="m-auto line-height-3">文案润色、深度访谈等：韩子涵</p>
+                        <p class="m-auto line-height-3">创意监理：韩子涵</p>
                         <p class="m-auto line-height-3 small">（文案润色，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
                         <p class="m-auto line-height-3 small"
                             style="color: #fefff0 !important; margin-bottom: -60px !important;">
