modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">以下成员对本文亦有贡献</p>
                         <p class="m-auto line-height-3">创意监理：韩子涵</p>
-                        <p class="m-auto line-height-3 small">（文案润色，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
+                        <p class="m-auto line-height-3 small">（文案润色与部分故事交互，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
                         <p class="m-auto line-height-3 small"
                             style="color: #fefff0 !important; margin-bottom: -60px !important;">
                             （激情落泪奖：曾创下最后两天才在小组成员催促下打开小组文档的壮举）</p>
