new file:   img/title.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- 导航栏区域 -->
     <div id="chapter-1-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">“快来抱抱她”</h1>
+            <h1 class="adding-title"><img src="img/title.png"></h1>
             <h4 class="m-auto">第一章 | 她们，单亲母亲</h4>
         </div>
         <div class="mobile-content">
@@ -48,7 +48,7 @@
 
     <div id="chapter-2-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">“快来抱抱她”</h1>
+            <h1 class="adding-title"><img src="img/title.png"></h1>
             <h4 class="m-auto">第二章 | 蔷薇色尘埃</h4>
         </div>
         <div class="mobile-content">
@@ -59,7 +59,7 @@
 
     <div id="chapter-3-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">“快来抱抱她”</h1>
+            <h1 class="adding-title"><img src="img/title.png"></h1>
             <h4 class="m-auto">第三章 | 羁绊与眼泪</h4>
         </div>
         <div class="mobile-content">
@@ -70,7 +70,7 @@
 
     <div id="chapter-4-header" class="text-center header shadow-box invisible">
         <div class="desktop-content">
-            <h1 class="adding-title">“快来抱抱她”</h1>
+            <h1 class="adding-title"><img src="img/title.png"></h1>
             <h4 class="m-auto">第四章 | 曙光与融冰</h4>
         </div>
         <div class="mobile-content">
