new file:   data/marital-status.js 	new file:   data/raise-num.js 	modified:   demo/test3.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -688,12 +688,20 @@
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同时，由于近年总体资料的缺失，我们对于近年来的单亲家庭成因只能从部分个体研究中窥见一斑。
             </p>
-            <p class="m-auto line-height-3">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一项基于十城市的单亲母亲的调研显示，在成为单亲母亲的原因方面，离异的单亲母亲最多；其次是丧偶，仅占不到五分之一；另外，未婚生子、婚内分居也占一定比例。
+            <div class="chart-center" id="marital-status" style="margin-bottom: -160px;"></div>
+            <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=411。
             </p>
             <p class="m-auto line-height-3">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;另外，基于统计区域的不同，离异的占比比重差别较大。在一项基于对吉林省内多个社区201位单亲母亲的调查中显示，在成为单亲母亲的原因方面，离异的单亲母亲最多，占比
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;基于北大家庭跟踪调查的411份单亲母亲样本，离婚是单亲母亲最常见的成因，占总数的76.7%。离婚后，抚养权归母亲的情况较为普遍，从而使这些母亲成为单亲母亲；其次是丧偶，仅占不到五分之一；另外，未婚生子也占一定比例。
+            </p>
+            <p class="m-auto line-height-3">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;基于统计区域的不同，离异的占比比重差别较大。在一项基于对吉林省内多个社区201位单亲母亲的调查中显示，在成为单亲母亲的原因方面，离异的单亲母亲最多，占比
                 84.1%，其次是丧偶的单亲母亲，占比 11.4%，未婚妈妈占据 4.5%。
+            </p>
+            <div class="chart-center" id="raise-num" style="margin-bottom: -160px;"></div>
+            <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=411。
             </p>
             <div id="婚姻状况-end"></div>
             <p class="m-auto line-height-3">
@@ -1467,5 +1475,7 @@
 <script src="data/income-rural.js"></script>
 <script src="data/money.js"></script>
 <script src="data/raise-cost.js"></script>
+<script src="data/marital-status.js"></script>
+<script src="data/raise-num.js"></script>
 
 </html>
