--- a/demo/test3.html
+++ b/demo/test3.html
@@ -1,66 +1,202 @@
 <!DOCTYPE html>
 <html style="height: 100%">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>ECharts</title>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.0/echarts.min.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/d3-hierarchy@2.0.0/dist/d3-hierarchy.min.js"></script>
 </head>
+
 <body style="height: 100%; margin: 0">
     <div id="main" style="height: 100%"></div>
     <script type="text/javascript">
-        (function() {
-            var chartDom = document.getElementById('main');
-            var chartInstance = echarts.init(chartDom);
-            var option = {
-              title: {
-                text: '单亲母亲抚养孩子数量统计',
-                left: 'center'
-              },
-              tooltip: {
-                trigger: 'item'
-              },
-              legend: {
-                top: '5%',
-                left: 'center'
-              },
-              series: [
-                {
-                  name: '抚养孩子数量',
-                  type: 'pie',
-                  radius: ['40%', '70%'],
-                  avoidLabelOverlap: false,
-                  startAngle: 180,
-                  endAngle: 360,
-                  itemStyle: {
-                    borderRadius: 10,
-                    borderColor: '#fff',
-                    borderWidth: 2
-                  },
-                  label: {
-                    show: true,
-                    position: 'outside',
-                    formatter: '{b}: {d}%'
-                  },
-                  emphasis: {
-                    label: {
-                      show: true,
-                      fontSize: 20,
-                      fontWeight: 'bold'
+        document.addEventListener('DOMContentLoaded', function () {
+            const rawData = {
+                name: "root",
+                children: [
+                    {
+                        name: "参与社群的妈妈",
+                        value: 148,
+                    },
+                    {
+                        name: "未参与社群的妈妈",
+                        value: 53,
+                        children: [
+                            {
+                                name: "没资源或者渠道接触",
+                                value: 26,
+                            },
+                            {
+                                name: "没有时间社交",
+                                value: 23,
+                            },
+                            {
+                                name: "自己可以应付生活与工作，没有这种需求",
+                                value: 18,
+                            }
+                        ]
                     }
-                  },
-                  labelLine: {
-                    show: true
-                  },
-                  data: [
-                    { value: 84.6, name: '1 个孩子' },
-                    { value: 13.9, name: '2 个孩子' },
-                    { value: 1.5, name: '超过 3 个孩子' }
-                  ]
-                }
-              ]
+                ]
             };
-            chartInstance.setOption(option);
-        })();
+
+            const myChart = echarts.init(document.getElementById('main'));
+
+            const seriesData = [];
+            let maxDepth = 0;
+
+            function convert(source, basePath, depth) {
+                if (!source) return;
+                if (maxDepth > 5) return;
+                maxDepth = Math.max(depth, maxDepth);
+                seriesData.push({
+                    id: basePath,
+                    value: source.value || 0,
+                    depth: depth,
+                    index: seriesData.length,
+                    name: source.name
+                });
+                if (source.children) {
+                    source.children.forEach((child, index) => {
+                        convert(child, `${basePath}.${index}`, depth + 1);
+                    });
+                }
+            }
+
+            convert(rawData, 'option', 0);
+
+            const displayRoot = d3
+                .stratify()
+                .parentId(d => d.id.substring(0, d.id.lastIndexOf('.')))(seriesData)
+                .sum(d => d.value)
+                .sort((a, b) => b.value - a.value);
+
+            function overallLayout(params, api) {
+                const context = params.context;
+                d3.pack()
+                    .size([api.getWidth() - 2, api.getHeight() - 2])
+                    .padding(3)(displayRoot);
+                context.nodes = {};
+                displayRoot.descendants().forEach(node => {
+                    context.nodes[node.id] = node;
+                });
+            }
+
+            function renderItem(params, api) {
+                const context = params.context;
+                if (!context.layout) {
+                    context.layout = true;
+                    overallLayout(params, api);
+                }
+                const nodePath = api.value('id');
+                const node = context.nodes[nodePath];
+                if (!node) return;
+                const isLeaf = !node.children || !node.children.length;
+                const nodeName = isLeaf ? node.data.name : '';
+                return {
+                    type: 'circle',
+                    shape: {
+                        cx: node.x,
+                        cy: node.y,
+                        r: node.r
+                    },
+                    transition: ['shape'],
+                    z2: api.value('depth') * 2,
+                    textContent: {
+                        type: 'text',
+                        style: {
+                            text: nodeName,
+                            fontFamily: 'Arial',
+                            fontSize: Math.max(node.r / 5, 10) // Smaller font size
+                        },
+                        emphasis: {
+                            style: {
+                                fontSize: Math.max(node.r / 5, 10)
+                            }
+                        }
+                    },
+                    textConfig: {
+                        position: 'inside'
+                    },
+                    style: {
+                        fill: api.visual('color')
+                    },
+                    emphasis: {
+                        style: {
+                            shadowBlur: 20,
+                            shadowOffsetX: 3,
+                            shadowOffsetY: 5,
+                            shadowColor: 'rgba(0,0,0,0.3)'
+                        }
+                    }
+                };
+            }
+
+            const option = {
+                title: {
+                    text: '单亲母亲社群参与情况',
+                    left: 'center'
+                },
+                tooltip: {
+                    trigger: 'item',
+                    formatter: function (params) {
+                        return `${params.data.name}: ${params.data.value}`;
+                    }
+                },
+                dataset: {
+                    source: seriesData
+                },
+                visualMap: [
+                    {
+                        show: false,
+                        min: 0,
+                        max: maxDepth,
+                        dimension: 'depth',
+                        inRange: {
+                            color: ['#F4E4E8', '#E8CAD3', '#DDB0BE', '#D194A9', '#C67893'] // Lighter Morandi pink colors
+                        }
+                    }
+                ],
+                hoverLayerThreshold: Infinity,
+                series: {
+                    type: 'custom',
+                    renderItem: renderItem,
+                    progressive: 0,
+                    coordinateSystem: 'none',
+                    encode: {
+                        tooltip: 'value',
+                        itemName: 'name'
+                    }
+                }
+            };
+
+            myChart.setOption(option);
+
+            myChart.on('click', { seriesIndex: 0 }, function (params) {
+                drillDown(params.data.id);
+            });
+
+            function drillDown(targetNodeId) {
+                let targetNode = displayRoot;
+                if (targetNodeId != null) {
+                    targetNode = displayRoot.descendants().find(node => node.data.id === targetNodeId);
+                }
+                targetNode.parent = null;
+                myChart.setOption({
+                    dataset: {
+                        source: seriesData
+                    }
+                });
+            }
+
+            myChart.getZr().on('click', function (event) {
+                if (!event.target) {
+                    drillDown();
+                }
+            });
+        });
+
     </script>
 </body>
+
 </html>
